# rust-wasm-playground

./: .gitignore  Cargo.toml  README.adoc  Trunk.toml  index.html
.github/workflows/: workflow.yaml
assets/style/: index.scss
lib/html-macro/: Cargo.toml
lib/html-macro-test/: Cargo.toml
lib/html-macro-test/src/: lib.rs  ui.rs
lib/html-macro-test/tests/ui/: plaintext-literal-fails.rs  plaintext-literal-fails.stderr  wrong-closing-tag-fails.rs  wrong-closing-tag-fails.stderr
lib/html-macro/src/: html.rs  html_analyse.rs  html_parse.rs  html_quote.rs  lib.rs
lib/vdom/: Cargo.toml
lib/vdom-link/: Cargo.toml
lib/vdom-link/src/: lib.rs
lib/vdom/src/: lib.rs
src/: lib.rs  main.rs
