[package]
name = "html-macro"
version = "0.1.0"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
vdom = { path = "../vdom" }
syn = { version = "1.0.82", features = ["full"] }
quote = "1.0.10"
proc-macro2 = "1.0.34"

[dev-dependencies]
speculoos = "0.8.0"
