[package]
name = "html-macro"
version = "0.1.0"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
vdom = { path = "../vdom" }
syn = { version = "1.0.91", features = ["full"] }
quote = "1.0.18"
uuid =  { version = "0.8.2", features = ["v4", "wasm-bindgen"] }
proc-macro2 = "1.0.37"
proc-macro-error = "1.0.4"

[dev-dependencies]
speculoos = "0.8.0"
